--- a/src/styles/FilmList.css
+++ b/src/styles/FilmList.css
@@ -2,3 +2,8 @@
     display: flex;
     flex-wrap: wrap;
 }
+.search{
+    margin-left: 15px;
+    display: flex;
+    justify-content: space-between;
+}
